--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="/Logo_SGIHPBPS.png" />
+    <link rel="icon"  href="/Logo_SGIHPBPs.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>SGIHPBPs of India - Home</title>
+        <title>SGIHPBP's of India - Home</title>
   </head>
   <body>
     <div id="root"></div>
